--- a/index.html
+++ b/index.html
@@ -20,20 +20,28 @@
     <title>कोकण रेल्वे प्रवासी संघटना</title>
 </head>
 <body class="bg-gray-100 flex flex-col min-h-screen font-tdm">
+    
+    <div class="navbar bg-gray-900 shadow-md">
+        <div class="nav-logo">
+            <img src="./images/logo2.png" alt="Logo">
+        </div>
+        <div class="nav-links">
+            <ul>
+                <li><button id="btn-home" class="nav-button">मुख्यपृष्ठ</button></li>
+                <li><button id="btn-about" class="nav-button">आमच्याबद्दल</button></li>
+                <li><button id="btn-contact" class="nav-button">संपर्क</button></li>
+            </ul>
+        </div>
+    </div>
+
     <header class="bg-gray-800 text-white py-8 shadow-md bg-cover bg-center relative" style="background-image: url('./images/swv\ banner.jpg'); height: 300px;">
         <div class="container mx-auto text-center px-4 md:px-8 h-full flex flex-col justify-center">
-            <h1 class="text-4xl md:text-6xl font-bold mb-4 px-4 main-heading">कोकण रेल्वे प्रवासी संघटना, सावंतवाडी</h1>
-            <h2 class="text-xl md:text-2xl font-bold mb-4 px-4 sub-heading">प्रवाशांच्या हक्कांसाठी लढा, सुरक्षित आणि सोयीस्कर प्रवासाचा ध्यास!</h2>
+            <h1 class="text-4xl md:text-6xl font-bold mb-4 px-4 main-heading text-stroke">कोकण रेल्वे प्रवासी संघटना, सावंतवाडी</h1>
+            <h2 class="text-xl md:text-2xl font-bold mb-4 px-4 sub-heading text-stroke">प्रवाशांच्या हक्कांसाठी लढा, सुरक्षित आणि सोयीस्कर प्रवासाचा ध्यास!</h2>
         </div>
     </header>
     
-    <nav class="bg-gray-900 py-3 shadow-md">
-        <ul class="container mx-auto flex justify-center space-x-4">
-            <li><button id="btn-home" class="nav-button text-white font-bold py-2 px-4 rounded hover:bg-blue-700">मुख्यपृष्ठ</button></li>
-            <li><button id="btn-about" class="nav-button text-white font-bold py-2 px-4 rounded hover:bg-blue-700">आमच्याबद्दल</button></li>
-            <li><button id="btn-contact" class="nav-button text-white font-bold py-2 px-4 rounded hover:bg-blue-700">संपर्क</button></li>
-        </ul>
-    </nav>
+
 
     <main class="container mx-auto py-8 flex-grow">
         <div class="sections-container max-w-screen-sm mx-auto">
