google AdSense to website

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <meta name="theme-color" content="#ffffff">
 
     <title>कोकण रेल्वे प्रवासी संघटना</title>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6849009576420641"
+     crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-100 flex flex-col min-h-screen font-tdm">
     
