--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <main class="container mx-auto py-8 flex-grow">
         <div class="sections-container max-w-screen-sm mx-auto">
             <section id="home" class="section-box bg-white shadow-md rounded-lg p-6 mb-6 relative">
-                <div class="flex flex-col items-center"> <!-- Changed to flex-col for column layout -->
-                    <div class="w-full bg-orange-500 p-4 rounded-lg mb-4 flex justify-center"> <!-- New div with orange background and padding -->
-                        <img src="./images/logo.png" alt="Image description" class="max-w-full rounded-lg"> <!-- Image with rounded corners -->
+                <div class="flex flex-col items-center"> 
+                    <div class="w-full bg-orange-500 p-4 rounded-lg mb-4 flex justify-center">
+                        <img src="./images/logo.png" alt="Image description" class="max-w-full rounded-lg"> 
                     </div>
                     <div class="w-full"> 
                         <h2 class="text-2xl font-bold mb-4 text-center">
@@ -61,15 +61,30 @@
                             कोकणच्या भविष्याचा..!!
                         </h2>
                         <p class="text-center">
-                            कोकण रेल्वे प्रवासी संघटना, सावंतवाडी आणि अखंड कोकण रेल्वे प्रवासी सेवा समिती सोबत, रेल्वे प्रवाशांना भेडसावणाऱ्या समस्या सोडवण्यासाठी अथक प्रयत्न करत आहे. सावंतवाडी टर्मिनसमधील सुधारणांना प्राधान्य देण्यासाठी आणि प्रवाशांच्या सुविधांचा दर्जा उंचावण्यासाठी रेल्वे प्रशासनाला जागृत करण्यावर त्यांचे सामूहिक प्रयत्न केंद्रित आहेत. उत्तम रेल्वे सेवांच्या या प्रवासात प्रत्येक आवाज महत्त्वाचा आहे. सर्वांसाठी अधिक आरामदायी आणि कार्यक्षम प्रवास अनुभव निर्माण करण्याच्या दिशेने निर्णायक पावले उचलण्याची विनंती करून, रेल्वे अधिकाऱ्यांना एक शक्तिशाली संदेश पाठवण्यासाठी खालील बटणावर क्लिक करून आता कारवाई करा. चला एकत्रितपणे, एक अर्थपूर्ण प्रभाव पाडूया आणि आपली रेल्वे प्रणाली प्रत्येक प्रवाशाच्या गरजा आणि अपेक्षा पूर्ण करेल याची खात्री करूया.
+                            <b>एक मेल ..हक्काच्या रेल्वे टर्मिनस साठी ..!! </b>
+                            <br><br>
+                            अखंड कोकण रेल्वे प्रवासी सेवा समिती सलग्न कोकण रेल्वे प्रवासी संघटना सावंतवाडी, ही अराजकीय, रेल्वे संदर्भात काम करणारी संघटना, सावंतवाडी टर्मिनस परिपूर्ण व्हावे, आणि येथे प्रवासी सेवेचा विस्तार व्हावा यासाठी प्रयत्नशील आहे.आज पर्यंत अनेक निवेदने, अधिकाऱ्यांचा भेटी गाठी या संघटनेतर्फे घेण्यात आले. २६ जानेवारीला हजारो लोकांचा उपस्थितीत सावंतवाडी स्थानकावर आंदोलन करण्यात आले.
+                            <br>
+                            कोकणवासीयांनो.. शेळ्या मेंढरांचा प्रवास किती वर्ष करणार..?? उत्तरेकडच्या आणि दक्षिणेच्या लोकांना आरामदायी प्रवास आणि आम्हाला जनरल डब्यातील असहनिय,वेळखाऊ प्रवास. आमच्या हक्काच्या फक्त महाराष्ट्रापुरती किती गाड्या..?? फक्त दोन..??हक्काच्या गाड्या पाहिजेत ना..?? 
+                            पेडण्यातील भोगद्यात चिखल साचल्याने कोकण रेल्वे ठप्प झाली,सर्व गाड्या या सावंतवाडीत थांबवण्यात आल्या, गोवा, कर्नाटक चे प्रवाश्यांना सावंतवाडी रेल्वे स्थानकातून बस द्वारे गोव्यात पाठवण्यात आले.
+                            तसेच काही गाड्या या सावंतवाडी तून सोडण्यात आल्या, प्रवाशांचा या गैरसोयीला जबाबदार कोण..?
+                            
+                            <br>
+                            टर्मिनसची आवश्यकता या कठीण प्रसंगी नक्की भासली.मग हे अजून पर्यंत का नाही पूर्ण झाले..?? याला जबाबदार कोण..?? शासन की प्रशासन .?? 
+                            <br>
+                            तळकोकणवासियांनो आपल्या सावंतवाडी स्थानकातून तब्बल तीन - तीन रेल्वे गाड्यांचे थांबे काढून घेण्यात आले,टर्मिनसचे काम अजूनही अपूर्णच आहे. इथल्या लोकप्रतिनिधींनी अनेक स्वप्ने दाखवली पण त्यातले एक ही सत्यात उतरले नाही ही शोकांतिका, तुम्हाला चीड नाही येत..? 🙏
+                            <br>
+                            त्यामुळे आता पुन्हा एकदा शासन आणि प्रशासन या दोघांनाही जागे करण्याची वेळ आलीय..
+                            होय.. आता फक्त आपल्या हातातून, हातातल्या मोबाईल मधून इथे दिलेल्या बटना द्वारे एक मेल रेल्वे मंत्र्यांना, खासदार, राज्यातील मंत्री, आमदार, कोकण रेल्वेचे अधिकारी यांना पाठवायचा आहे.
+                            इथे दिलेलं बटन दाबा, मेल उघडेल, तो मेल आपल्याला फक्त पाठवायचा आहे.
                         </p>
                     </div>
                 </div>
             </section>            
             <section id="about" class="section-box bg-white shadow-md rounded-lg p-6 mb-6 hidden relative">
-                <div class="flex flex-col items-center"> <!-- Changed to flex-col for column layout -->
-                    <div class="w-full bg-orange-500 p-4 rounded-lg mb-4 flex justify-center"> <!-- New div with orange background and padding -->
-                        <img src="./images/logo.png" alt="Image description" class="max-w-full rounded-lg"> <!-- Image with rounded corners -->
+                <div class="flex flex-col items-center"> 
+                    <div class="w-full bg-orange-500 p-4 rounded-lg mb-4 flex justify-center">
+                        <img src="./images/logo.png" alt="Image description" class="max-w-full rounded-lg">
                     </div>
                     <div class="w-full"> 
                         <h2 class="text-2xl font-bold mb-4 text-center">आमच्याबद्दल...</h2>
@@ -86,14 +101,14 @@
             </section>
             
             <section id="contact" class="section-box bg-white shadow-md rounded-lg p-6 mb-6 hidden relative">
-                <div class="flex flex-col items-center"> <!-- Changed to flex-col for column layout -->
-                    <div class="w-full bg-orange-500 p-4 rounded-lg mb-4 flex justify-center"> <!-- New div with orange background and padding -->
-                        <img src="./images/logo.png" alt="Image description" class="max-w-full rounded-lg"> <!-- Image with rounded corners -->
+                <div class="flex flex-col items-center"> 
+                    <div class="w-full bg-orange-500 p-4 rounded-lg mb-4 flex justify-center"> 
+                        <img src="./images/logo.png" alt="Image description" class="max-w-full rounded-lg">
                     </div>
                     <div class="w-full">
                         <h2 class="text-2xl font-bold mb-4 text-center">संपर्क</h2>
                         <p class="text-center">ईमेल: Swaditerminus@gmail.com</p>
-                        <div class="flex flex-wrap justify-center mt-4"> <!-- Social media links container -->
+                        <div class="flex flex-wrap justify-center mt-4"> 
                             <a href="https://www.facebook.com/swvterminus" target="_blank" class="social-link">
                                 <button class="bg-blue-600 space-x-4 space-y-5 hover:bg-blue-700 text-white px-3 py-2 rounded-md w-full sm:w-auto mb-4 sm:mb-0">
                                     <i class="fab fa-facebook-f mr-2"></i> Facebook
